--- a/party_Macro/.classpath
+++ b/party_Macro/.classpath
@@ -2,7 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="Lib/json-simple-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Fred/git/DraPartyLogin/party_Macro/Lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AppDreamTeam_JH/git/DraPartyLogin/party_Macro/Lib/commons-io-2.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Makeshop"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
